--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,18 @@ version = "0.1.0"
 description = ""
 authors = ["OferT-FTS <ofer@il-fts.com>"]
 readme = "README.md"
-package-mode = false
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">=3.11,<4.0"
 poetry-core = "^2.1.3"
+streamlit = "^1.47.1"
+pandas = "^2.3.1"
+numpy = "^2.3.2"
+plotly = "^6.2.0"
+seaborn = "^0.13.2"
+python-dotenv = "^1.1.1"
+scipy = "^1.16.1"
+requests = "^2.32.4"
 
 [build-system]
 requires = ["poetry-core"]
