--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["OferT-FTS <ofer@il-fts.com>"]
 readme = "README.md"
+package-mode=false
 
 [tool.poetry.dependencies]
 python = ">=3.11,<4.0"
