--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ seaborn = "^0.13.2"
 python-dotenv = "^1.1.1"
 scipy = "^1.16.1"
 requests = "^2.32.4"
+openpyxl = "^3.1.5"
 
 [build-system]
 requires = ["poetry-core"]
